Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Earned_Achievement__c/Earned_Achievement__c.object-meta.xml
<CustomObject>
    <label>Earned Achievement</label>
    <pluralLabel>Earned Achievements</pluralLabel>
    <nameField>
        <label>Earned Achievement</label>
        <type>AutoNumber</type>
        <displayFormat>EA-{000000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>