Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Earned_Achievement__c/fields/Achievement_Name__c.field-meta.xml
<CustomField>
    <fullName>Achievement_Name__c</fullName>
    <label>Achievement Name</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>The display name of the achievement earned.</inlineHelpText>
</CustomField>