Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Earned_Achievement__c/fields/Definition_Id__c.field-meta.xml
<CustomField>
    <fullName>Definition_Id__c</fullName>
    <label>Definition Id</label>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText>The DeveloperName of the Achievement_Definition__mdt record that defined this achievement.</inlineHelpText>
</CustomField>