Sessions/AgentforceVibes/Session-011_AgentforceVibes_ThreeArchitecture_BeechHorn/force-app/main/default/objects/Earned_Achievement__c/fields/Trailblazer_Profile__c.field-meta.xml
<CustomField>
    <fullName>Trailblazer_Profile__c</fullName>
    <label>Trailblazer Profile</label>
    <type>MasterDetail</type>
    <referenceTo>Trailblazer_Profile__c</referenceTo>
    <relationshipName>Earned_Achievements</relationshipName>
    <relationshipLabel>Earned Achievements</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
    <inlineHelpText>The Trailblazer profile this achievement belongs to.</inlineHelpText>
</CustomField>